fix: Preserve application state and report backup failures